--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>¡Hola!</title>
-</head>
-<body>
-¡Hola, mundo!
-</body>
+    <head>
+        <title>¡Hola!</title>
+        <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    </head>
+    <body>
+    <h1>Hola mundo!</h1>
+    <h2>My first pull request in this repository</h2>
+    <p>Hi, this is a test about pull request a repositories publics, <b>please accept me</b></p>
+
+    <div class="container p-3 my-3 bg-dark text-white">
+        <h1>My Channel</h1>
+        <a href="https://www.youtube.com/channel/UCHWpLKTk8w1rQoKhwfzneNA">Click me</a>
+    </div>
+
+    </body>
 </html>
